@@ -1,5 +1,9 @@
 # Changelog (dd/mm/yy)
 
+## (10/01/26)
+
+· 👌 IMPROVE: Games > OpenRCT2 for aarch64.
+
 ## (26/12/25)
 
 · 👌 IMPROVE: Games > OpenJK (Jedi Academy) for aarch64.
